Issue 2180:  HTML panel should show whitespace and comments; white space part here.
http://code.google.com/p/fbug/source/detail?r=3860

--- a/extension/skin/classic/html.css
+++ b/extension/skin/classic/html.css
@@ -57,6 +57,11 @@
     color: #333333;
 }
 
+.nodeWhiteSpace {
+    border: 1px solid gray;
+    white-space: pre; /* otherwise the border will be collapsed around zero pixels */
+}
+
 .nodeComment {
     color: DarkGreen;
 }
